addShard() is missing a check to see if a status is okay before processing it further

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.1
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 2018-07-02
    • 15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In this commit, a few lines were refactored into a local lambda function, but the check here was not ported over:
      https://github.com/mongodb/mongo/commit/09919208ae16cd44f3ca3e98220e1cc322419a8a#diff-64f8569158f82fc1a18681d15ce10b4aL651

      This can lead to issues when trying to process the command further.

            Assignee:
            Matthew Saltz (Inactive)
            Reporter:
            Matthew Saltz (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: