SERVER-35760 Add status check in addShard